Path params are working